# parquet-query-gateway

./: .gitignore  Dockerfile  README.md  audit.js  auth-flow.js  datasets.js  docker-compose.yml  gateway-client.js  login.js  opencli-plugin.json  pyproject.toml  query.js  schema.js  smoke-test.js
.codegraph/: daemon.pid
config/: example.yml
deploy/: parquet-gateway.service
docs/: client-installation-guide.md  installation-guide.md
docs/superpowers/plans/: 2026-05-27-parquet-query-gateway.md
docs/superpowers/specs/: 2026-05-27-parquet-query-gateway-design.md  2026-06-05-modernize-admin-config-permission-ui-design.md
parquet_gateway/: __init__.py  admin_config.py  admin_ui.py  app.py  audit.py  auth.py  bootstrap.py  cli.py  config.py  errors.py  executor.py  feishu.py  main.py  models.py  policy.py  query_builder.py
reports/: guancli-vs-parquet-date-dimension-2026-06-02.md  parquet-dmk-sale-margin-delivery-dtl-benchmark-2026-06-01.md  parquet-dmk-sale-margin-delivery-dtl-full-analysis-2026-06-01.md
scripts/: client-install.ps1  client-install.sh  install.ps1  install.sh  package-client.ps1
tests/: conftest.py  test_app.py  test_bootstrap.py  test_cli.py  test_client_auth_flow.py  test_config_auth.py  test_executor_audit.py  test_feishu_auth.py  test_opencli_plugin.py  test_query_builder.py
